--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -1,11 +1,15 @@
 ---
 formatter: markdown table
 
-version: ">= 0.16.0, < 1.0.0"
+version: ">= 0.17.0, < 1.0.0"
 
 output:
   file: README.md
   mode: inject
+  template: |-
+    <!-- BEGIN_TF_DOCS -->
+    {{ .Content }}
+    <!-- END_TF_DOCS -->
 
 sort:
   enabled: true
